2016-02-23  Masamichi HOSODA  <trueroad@trueroad.jp>

	* pdfdoc.c: Support UTF-16 with null bytes as labels.

2016-02-23  Jonathan Kew  <jfkthame@gmail.com>

	* dvicodes.h, dvi.c, pdfdev.[ch]: Support xetex 0.99995 output
	(dvi format 7) that includes ActualText content.

2016-02-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Remaining fix for that on 2016-02-13.

2016-02-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Remove maybe-redundant code to obtain consistency
	between dvi (dvipdfmx) and xdv (xdvipdfmx) with respect to
	\special{pdf:dest...}.

2016-02-09  Jiang Jiang  <gzjjgod@gmail.com>

	* dvi.c: Tweak skip_native_font_def() to make it handle more
	flags.
	* dpxutil.c: Remove a redundant check found by -Wall.

2016-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: disable check_postamble() introduced by Peter, because
	features embolden != 0, slant != 0, and extend != 1 do not work.

2016-01-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tt_post.c: Check post->glyphNamePtr[gid] before an access
	in tt_get_glyphname(). Reported by Werner LEMBERG:
	http://tug.org/pipermail/tex-live/2016-January/037696.html.

2016-01-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Remove trailing directory separators if any in
	dpx_get_tmpdir().

2016-01-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c, mfileio.[ch]: Modification on handling of xref table.
	More permissive on treating white-spaces but more strict on
	handling tokens.

2016-01-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* epdf.c: A typo in a message.
	* xbb.c: Change copyright year.
	* tests/: Change test data.

2016-01-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* t1_load.c: Avoid to crash for unsupported type1 fonts as native fonts.
	* configure.ac: version 20160106.
	* almost all files: change Copyright year.

2016-01-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Symplify support of native type1 fonts in XeTeX.
