@@ -1,3 +1,12 @@
+2016-02-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* pdfdoc.c, pdfencrypt.c, pdffont.c, pdfobj.h, xbb.c: Support to output
+	a unique pdf file from a unique xdv/dvi file. If an environment
+	variable SOURCE_DATE_EPOCH is defined correctly like
+	SOURCE_DATE_EPOCH=1456304783, the value is used as the current time,
+	and if the name of the output pdf file is the same, its contents is
+	exactly unique.
+
 2016-02-23  Masamichi HOSODA  <trueroad@trueroad.jp>
 
 	* pdfdoc.c: Support UTF-16 with null bytes as labels.
